k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 8000
